--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
   border-radius: 10px;
   background: #FFFFFF;
   box-shadow: 0 0 2rem rgba(0, 0, 0, .1);
+  cursor: pointer;
 }
 
 .produto_img {
