--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body, h1, h2, ul, li {
+body, h1, h2, ul, li, p {
   padding: 0px;
   margin: 0px;
 }
@@ -53,6 +53,97 @@ body {
 
 /* Modal */
 
+.modal::before {
+  content: "";
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+
 .modal {
-  background: #fff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  padding: 80px;
+}
+
+.modal_container {
+  position: relative;
+  background: linear-gradient(to right, transparent 250px, #FFF 250px);
+  z-index: 1;
+  display: grid;
+  align-items: end;
+  grid-gap: 50px;
+  padding: 0px 50px 50px 0;
+}
+
+.modal_img {
+  grid-column: 1;
+  margin-top: 50px;
+  box-shadow: 0px 3px 4px rgba(0,0,0, .1), 0px 4px 10px rgba(0,0,0, .2);
+}
+
+.modal_img img {
+  max-width: 300px;
+  display: block;
+}
+
+.modal_dados {
+  grid-column: 2;
+  max-width: 600px;
+}
+
+.modal_titulo {
+  font-size: 3rem;
+}
+
+.modal_btn {
+  margin-top: 50px;
+  background: #1C1C1C;
+  color: #FFF;
+  border: none;
+  font-size: 1rem;
+  padding: 10px 25px;
+  cursor: pointer;
+  transition: .5s;
+}
+
+.modal_btn:hover {
+  background: #808080;
+}
+
+.modal_btn:active {
+  background: #808080;
+}
+
+/* Reviews */
+
+.reviews {
+  grid-column: 2;
+}
+
+.review {
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+  padding-bottom: 20px;
+}
+
+.reviews_subtitulo {
+  font-size: 1.75rem;
+}
+
+.review_descricao {
+  color: rgba(0, 0, 0, .7);
+  margin: 20px 0 5px 0;
+}
+
+.review_usuario {
+  font-weight: bold;
 }
