--- a/style.css
+++ b/style.css
@@ -31,7 +31,6 @@ body {
   display: flex;
   align-items: center;
   margin-bottom: 40px;
-  border-radius: 10px;
   background: #FFFFFF;
   box-shadow: 0 0 2rem rgba(0, 0, 0, .1);
   cursor: pointer;
@@ -83,6 +82,31 @@ body {
   align-items: end;
   grid-gap: 50px;
   padding: 0px 50px 50px 0;
+  animation: fadeIn .3s forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translate3d(50px, 0, 0)
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0px, 0, 0);
+  }
+}
+
+.modal_fechar {
+  border-radius: 50%;
+  border: 2px solid #1C1C1C;
+  background: #FFF;
+  box-shadow: 0px 3px 4px rgba(0,0,0, .1), 0px 4px 10px rgba(0,0,0, .2);
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  cursor: pointer;
 }
 
 .modal_img {
