--- a/style.css
+++ b/style.css
@@ -20,6 +20,35 @@ body {
   padding: 0 80px
 }
 
+/* Header */ 
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  max-width: 900px;
+  padding: 20px 0;
+  margin: 0 auto;
+}
+
+.logo {
+  width: 80px;
+}
+
+.carrinho_menu::after {
+  content: '';
+  display: inline-block;
+  background: url('./assets/carrinho.svg') no-repeat center center;
+  width: 25px;
+  height: 25px;
+  margin-left: 10px;
+}
+
+.carrinho_menu {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
 /* LISTA */
 
 .produtos {
@@ -147,6 +176,11 @@ body {
 .modal_btn:active {
   background: #808080;
 }
+
+.modal_btn.esgotado {
+  background: #E54;
+}
+
 
 /* Reviews */
 
