--- a/style.css
+++ b/style.css
@@ -242,3 +242,94 @@ body {
   border: 2px solid #000;
   box-shadow: 0px 3px 4px rgba(0,0,0, .1), 0px 4px 10px rgba(0,0,0, .2);
 }
+
+/* carrinho */
+
+.carrinho_modal::before {
+  content: '';
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, .5);
+}
+
+.carrinho_modal {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  top: 0px;
+  left: 0px;
+  padding: 20px;
+  width: 100%;
+  display: none;
+}
+
+.carrinho_modal.ativo {
+  display: block;
+}
+
+.carrinho_container {
+  position: relative;
+  margin: 80px auto;
+  background: #FFF;
+  padding: 40px;
+  max-width: 800px;
+  animation: fadeInDown .3s forwards;
+}
+
+.carrinho_item {
+  display: grid;
+  padding: 5px 0;
+  grid-template-columns: 1fr 1fr 50px;
+  border-bottom: 1px solid rgba(0, 0, 0, .1);
+}
+
+.carrinho_titulo {
+  margin-bottom: 10px;
+  border-bottom: 2px solid #1C1C1C;
+  padding-bottom: 20px;
+}
+
+.carrinho_fechar {
+  border-radius: 50%;
+  border: 2px solid #1C1C1C;
+  background: #FFF;
+  box-shadow: 0px 3px 4px rgba(0,0,0, .1), 0px 4px 10px rgba(0,0,0, .2);
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  cursor: pointer;
+}
+
+
+.carrinho_remover {
+  border: none;
+  font-size: 1rem;
+  background: #FFF;
+  cursor: pointer;
+}
+
+.carrinho_preco {
+  text-align: right;
+}
+
+.carrinho_total {
+  text-align: right;
+  padding: 10px 50px 10px 0;
+  border-bottom: 2px solid #1C1C1C;
+}
+
+.finalizar_compra {
+  display: block;
+  margin-left: auto;
+  margin-top: 20px;
+  background: #1C1C1C;
+  cursor: pointer;
+  color: #FFF;
+  font-size: 1rem;
+  padding: 10px 25px;
+  border: none;
+}
