--- a/style.css
+++ b/style.css
@@ -333,3 +333,72 @@ body {
   padding: 10px 25px;
   border: none;
 }
+
+
+/* responsivo */
+
+@media screen and (max-width: 900px) {
+  #app {
+    padding: 0 10px;
+  }
+
+  .produtos {
+    margin-top: 40px;
+  }
+
+  .produto {
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 300px;
+    margin: 30px auto;
+  }
+
+  .produto_info {
+    padding: 20px;
+  }
+
+  .produto_img {
+    max-width: 100%;
+  }
+
+  .produto_titulo {
+    font-size: 1.5rem;
+  }
+
+  .modal {
+    padding: 10px;
+  }
+
+  .modal_container {
+    grid-gap: 20px;
+    background: #FFF;
+    padding: 10px 0;
+  }
+
+  .modal_img {
+    grid-row: 2;
+  }
+
+  .modal_img img {
+    width: 100%;
+    max-width: initial;
+  }
+
+  .modal_dados {
+    grid-column: 1;
+    padding: 10px;
+  }
+
+  .reviews {
+    grid-column: 1;
+    padding: 10px;
+  }
+
+  .modal_btn {
+    margin-top: 20px;
+  }
+
+  .carrinho_modal {
+    padding: 10px;
+  }
+}
